# connected-home-optiga-trust

./: .gitmodules  HWTestPassOutput.txt  README.md  SWTestPassOutput.txt  prep_rpi.bash  trustm_init.c
HWTest/: README
MBedTLS/: Makefile.am  README  platform_alt.h
OptigaMEvalDelivery/: README  README.md
OptigaMEvalDelivery/HWTest/: trustx_chipinfo
OptigaMEvalDelivery/OptigaMMbedTLS/: README  trustm_ecdh.c  trustm_init.c  trustm_random.c
OptigaMEvalDelivery/src/crypto/: CHIPCryptoPALmbedTLS.cpp  Makefile.am
OptigaMEvalDelivery/src/crypto/tests/: CHIPCryptoPALTest.cpp
OptigaMMbedTLS/: README  trustm_ecdh.c  trustm_ecdsa.c
hwtest/: README  trustm_chipinfo
mbedtls/: BUILD.gn  README  config.h
mbedtls-optiga-trust/: BUILD.gn  Makefile.am
optigam_mbedtls/: trustm_init.c  trustm_random.c
src/: README
src/crypto/: CHIPCryptoPALmbedTLS.cpp
src/crypto/tests/: BUILD.gn  CHIPCryptoPALTest.cpp  Makefile.am
